...
    var searching = false
    
    var viewModel: SelectCityWeatherViewModel!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Select City"
        self.view.backgroundColor = UIColor.BackgroundColor.background
        
        viewModel = SelectCityWeatherViewModel(complition: {
            self.tableview.reloadData()
        })
        setTableView()
...
