...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.navigationController?.setTranspertBar(titleColor: .white, tinColor: .white)
        viewModel = MainWeatherViewModel()
        setupLocationManager()
        self.title = "Cities"
        setCollection()
        
        registerCell()
        layout()
    }
    
...
